# msdf-atlas-read

./: CMakeLists.txt  LICENSE
include/: msdf-atlas-read.h
